FindById now return role info also. Admin now can change user role.
