# main.go
@@ -94,6 +94,8 @@ func main() {
 	UserHandler := handlers.NewUserHandlers(UsersRepository, CuratorsRepository, RolesRepository)
 	resetPasswordHandler := handlers.NewResetPasswordHandler(AuthRepository, UsersRepository)
 
+	r.GET("/role/:id", UserHandler.GetRole)
+
 	// Маршруты для аутентификации
 	authGroup := r.Group("/auth")
 	{
@@ -130,6 +132,7 @@ func main() {
 	settingsRoutes.GET("/users/:userId", UserHandler.FindById)
 	settingsRoutes.GET("/users", UserHandler.FindAll)
 	settingsRoutes.PUT("/users/:userId", UserHandler.Update)
+	settingsRoutes.PUT("/users/:userId/role", UserHandler.UpdateUserRole)
 	settingsRoutes.DELETE("/users/:userId", UserHandler.Delete)
 
 	// Получение списков Менеджеров и Кураторов
@@ -184,55 +187,55 @@ func main() {
 }
 
 
-// func loadConfig() error {
-// 	// Указываем путь к .env файлу
-// 	viper.SetConfigFile(".env")
-
-// 	// Загружаем переменные из .env, если он есть (необязательно)
-// 	_ = viper.ReadInConfig() // не падаем, если файла нет
-
-// 	// Читаем переменные окружения (например, из Railway)
-// 	viper.AutomaticEnv()
-
-// 	// Мапим переменные в структуру
-// 	var mapConfig config.MapConfig
-// 	err := viper.Unmarshal(&mapConfig)
-// 	if err != nil {
-// 		return err
-// 	}
-
-// 	config.Config = &mapConfig
-// 	return nil
-
-// }
-
 func loadConfig() error {
-    viper.SetConfigFile(".env")
-    _ = viper.ReadInConfig()   
-    viper.AutomaticEnv()      
+	// Указываем путь к .env файлу
+	viper.SetConfigFile(".env")
 
+	// Загружаем переменные из .env, если он есть (необязательно)
+	_ = viper.ReadInConfig() // не падаем, если файла нет
 
-    var cfg config.MapConfig
-    if err := viper.Unmarshal(&cfg); err != nil {
-        return err
-    }
+	// Читаем переменные окружения (например, из Railway)
+	viper.AutomaticEnv()
 
-    cfg.DbConnectionString = viper.GetString("DATABASE_URL")
+	// Мапим переменные в структуру
+	var mapConfig config.MapConfig
+	err := viper.Unmarshal(&mapConfig)
+	if err != nil {
+		return err
+	}
 
-    cfg.JwtSecretKey        = viper.GetString("JWT_SECRET_KEY")
-    cfg.JwtExpiresIn     = viper.GetDuration("JWT_EXPIRE_DURATION")
-    cfg.Initial_Password   = viper.GetString("INITIAL_PASSWORD")
-    cfg.Admin_Name     = viper.GetString("ADMIN_NAME")
-    cfg.Admin_Mail     = viper.GetString("ADMIN_MAIL")
-    cfg.Admin_Phone     = viper.GetString("ADMIN_PHONE")
-    cfg.SMTPPassword          = viper.GetString("SMTP_PASSWORD")
-    cfg.SMTPEmail       = viper.GetString("SMTP_EMAIL")
-    cfg.SMTPHost             = viper.GetString("SMTP_HOST")
-    cfg.SMTPPort             = viper.GetString("SMTP_PORT")
-  
-    config.Config = &cfg
-    return nil
+	config.Config = &mapConfig
+	return nil
+
 }
+
+// func loadConfig() error {
+//     viper.SetConfigFile(".env")
+//     _ = viper.ReadInConfig()   
+//     viper.AutomaticEnv()      
+
+
+//     var cfg config.MapConfig
+//     if err := viper.Unmarshal(&cfg); err != nil {
+//         return err
+//     }
+
+//     cfg.DbConnectionString = viper.GetString("DATABASE_URL")
+
+//     cfg.JwtSecretKey        = viper.GetString("JWT_SECRET_KEY")
+//     cfg.JwtExpiresIn     = viper.GetDuration("JWT_EXPIRE_DURATION")
+//     cfg.Initial_Password   = viper.GetString("INITIAL_PASSWORD")
+//     cfg.Admin_Name     = viper.GetString("ADMIN_NAME")
+//     cfg.Admin_Mail     = viper.GetString("ADMIN_MAIL")
+//     cfg.Admin_Phone     = viper.GetString("ADMIN_PHONE")
+//     cfg.SMTPPassword          = viper.GetString("SMTP_PASSWORD")
+//     cfg.SMTPEmail       = viper.GetString("SMTP_EMAIL")
+//     cfg.SMTPHost             = viper.GetString("SMTP_HOST")
+//     cfg.SMTPPort             = viper.GetString("SMTP_PORT")
+  
+//     config.Config = &cfg
+//     return nil
+// }
 
 
 func connectToDb() (*pgxpool.Pool, error) {
